--- a/src/Footer.css
+++ b/src/Footer.css
@@ -56,22 +56,22 @@
 .footer .title {
   box-sizing: border-box;
   flex-grow: 1;
-  font-size: 150%;
-  font-weight: normal;
+  font-size: 180%;
+  font-weight: bold;
 }
 
 .footer .subtitle {
   box-sizing: border-box;
   flex-grow: 1;
-  font-size: 150%;
-  font-weight: lighter;
+  font-size: 180%;
+  font-weight: normal;
 }
 
 .footer .quick-news {
   box-sizing: border-box;
   flex-grow: 1;
-  font-size: 120%;
-  font-weight: lighter;
+  font-size: 160%;
+  font-weight: normal;
   text-transform: uppercase;
 }
 
